terraform support for zservice APIs
